# dnamic-lab

./: .dax  .gitignore  README.md  aliases.py  code_submit.py  dataset_db-backup.mdb  dataset_db-backup.mdb-lock  dataset_db.mdb-lock.backup  dataset_db.mdb.backup  device_db.py  device_db_generated.py  device_db_old.py  device_db_simulator.py  example_trace.vcd  fix-vcd.patch  image_roi_applet.py  plot_vcd_helper.py  submit_test.py  test_ad9910_waveform.py  test_coreanalyzer.vcd
artiq-system-description/: .gitignore  device_db.py
artiq-system-description-new/du2509001/: du2509001.json
artiq-system-description-old/: device_db.py
artiq-system-description-old/du2509003/: du2509003.json
artiq-system-description/current/du2509002/: du2509002.json
artiq-system-description/current/du2509003/: du2509003.json
artiq-system-description/original-unmodified-technosystem/du2509001/: du2509001.json
artiq-system-description/original-unmodified-technosystem/du2509002/: du2509002.json
docs/: AWG_install.md  GPU_drivers.md  environment_dependencies.md  flashing.md  making_sequence.md  ndscan_flow.md  useful_repos.md
environment/bare/: README.md  pyproject.toml
environment/nix/: README.md  flake.nix
environment/nix/src/: artiq-lab-tmux.sh  setup-artiq-master-dev.sh
ndsps/andor-camera/: README.md  andor_emccd_driver.py  aqctl_andor_emccd.py  bench_client.py  pyproject.toml
ndsps/andor-camera/artiq/: pyproject.toml
ndsps/andor-camera/artiq/src/dnamic_andor_artiq/: __init__.py  mediator.py
ndsps/andor-camera/host/: pyproject.toml  run_aqctl_andor_emccd
ndsps/andor-camera/host/src/dnamic_andor_host/: andor_emccd_driver.py  aqctl_andor_emccd.py
ndsps/andor-camera/host/test_clients/: bench_client.py  connect_picture_test.py
ndsps/doc-example/: aqcli_hello.py  aqctl_hello.py
ndsps/spectrum-awg/: README.md  pyproject.toml
ndsps/spectrum-awg/host/: pyproject.toml  run_aqctl_spectrum_awg
ndsps/spectrum-awg/host/src/: aqctl_spectrum_awg.py  spectrum_awg_driver.py
ndsps/spectrum-awg/host/src/spectrum_awg_host/: aqctl_spectrum_awg.py  calibration_constants.py  spectrum_awg_driver.py
ndsps/spectrum-awg/host/test_clients/: connect_test.py  connect_upload_test.py  rearrange_test.py  upload_test.py
ndsps/template_device/host/: pyproject.toml
ndsps/thorlabs-pm100d/: README.md
ndsps/thorlabs-pm100d/host/: pyproject.toml  run_aqctl_thorlabs_pm100d
ndsps/thorlabs-pm100d/host/src/dnamic_thorlabs_pm100d_host/: __init__.py  aqctl_thorlabs_pm100d.py  driver.py
ndsps/thorlabs-pm100d/host/test_clients/: read_power.py
ndsps/thorlabs-pm100d/host/tests/: test_driver.py
pydex_controller/: README.md  pydex_command_listener_dac.py  pydex_command_listener_template.py  pydex_transport.py  simulate_pydex.py
repository/: __init__.py  components.py
repository/analysis/: plot_817_servo.py  plot_load_mot_images.py
repository/calibrations/: calibrate_field.py
repository/experiments/: README.md  __init__.py
repository/experiments/atoms/: README.md  __init__.py  cs_mot.py  cs_mot_optimisation.py  cs_parametric_heating.py  cs_release_recapture.py  (+2 more)
repository/lib/: make_shot_scan.py  single_shot_base.py  stats.py  suservo_workaround.py
repository/manual_control/: andor_video.py  suservo_constant.py  urukul_manual_control.py
repository/random/: picosope_test.py
repository/reusable/: suservo.py
repository/sequences/: README.md  atom_MW_state_change.py  bound_stage_transition.py  cs_mot.py  cs_mot_optimisation.py  cs_mot_refactored.py  cs_parametric_heating.py  cs_release_recapture.py  cs_servo_cal.py  dark_counts.py  load_mot.py  load_mot_vanilla.py  load_tweezers_and_image.py  mixed_awg_rtio.py  rb_cs_mot_refactored.py  rb_mot.py  rb_mot_refactored.py  rb_mot_simple.py
(+76 files in other folders)
