[project]
name = "spectrum-awg-host"
version = "0.1.0"
description = "Host-side controller for Spectrum AWG in segment mode programmed with an AWGSegment Factory"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sipyco",
  "pyandorsdk2",
  "matplotlib>=3.10.8",
  "pyqt6>=6.10.1",
]

[project.optional-dependencies]
tools = [
  "matplotlib",
  "pyqt6",
]

[project.scripts]
aqctl_andor_emccd = "dnamic_andor_host.aqctl_andor_emccd:main"

[tool.uv.sources]
sipyco = { git = "https://git.m-labs.hk/M-Labs/sipyco.git" }

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
