[project]
name = "dnamic-andor-host"
version = "0.1.0"
description = "Host-side controller for Andor camera (SiPyCo RPC, no ARTIQ dependency)"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sipyco",
  "pyandorsdk2",
]

[project.optional-dependencies]
tools = [
  "matplotlib",
  "pyqt6",
]

[project.scripts]
aqctl_andor_emccd = "dnamic_andor_host.aqctl_andor_emccd:main"

[tool.uv.sources]
sipyco = { git = "https://git.m-labs.hk/M-Labs/sipyco.git" }
pyandorsdk2 = { path = "../../../../software-downloads/AndorLinuxSDK/andor/python/pyAndorSDK2" }

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
