[project]
name = "spectrum-awg-host"
version = "0.1.0"
description = "Host-side controller for Spectrum AWG in segment mode programmed with an AWGSegment Factory"
requires-python = ">=3.13"
dependencies = [
  "awgsegmentfactory",
  "numpy",
  "sipyco",
]

[project.optional-dependencies]
tools = [
  "matplotlib",
  "pyqt6",
]

[project.scripts]
aqctl_spectrum_awg = "spectrum_awg_host.aqctl_spectrum_awg:main"

[tool.uv.sources]
sipyco = { git = "https://git.m-labs.hk/M-Labs/sipyco.git" }
awgsegmentfactory = { path = "../../../../../code/AWGSegmentFactory", editable = true }

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
